# misc

./: .gitignore  1992-draft.py  Day91.ipynb  GroupBy.py  Pandas code snippets.md  Pandas code snippets.txt  README.md  UpdateExcelFile.py  add-blockquote-file.py  add-blockquote-input.py  add-blockquote.py  add-file-ext.py  add-space.py  add-to-filename.py  addblockquote.py  all-feeds.txt  article-summary-spacy-paste-text.py  article-summary-spacy.py  article-summary-sumy-link.py  article-summary.py  article-summmary-spacy.py  article.md  assign-to-queue.py  baqup.py  betsim.py  book-chooser.py  bookchooser.py  bookmetadata.py  books.csv  books.xls  buyingvsrenting.py  bw-dupes.sh  bw-search.sh  calc-net-work-days.py  calc-time-zone-pendulum.py  calc-time-zone.py  change-all-files-case.py  change-file-info.py  change-filename-case.py  change-string.py  (+317 more)
calc/: buyingvsrenting.py  calc-elapsed-hours.py  calc-elapsed-hours.r  calc-elapsed-time.py  calc-time-zone.py  count-all-words-in-md-file-folder.py  count-characters.py  count-characters.r  count-chars-string.py  count-filtered-values.R  count-in-multiple-csvs.py  count-json-records.py  count-missing-records.R  count-string.py  count-vals.py  create-permutations.py  exponential-growth.py  milesoffset.py  mortgagepayoff.py  payoff.py  solver.R  sum-all-numeric-cols.r  sweigart-lotto.py  weighted-shuffle.py  workalendar-example.py
dataframes/: GroupBy Pivot Table.ipynb  PySpark.ipynb  Python Sequences.txt  add-calc-columns.r  chart.r  column-copy.py  column-value-counts.R  compare-and-count-dupes.r  compare-dataset-counts.R  (+142 more)
(+443 files in other folders)
