[project]
name = "misc"
version = "0.1.0"
description = "all my misc python scripts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "polars",
    "numpy",
    "requests>=2.32.5",
    "bs4>=0.0.2",
    "ebooklib>=0.19",
    "markdown-it-py>=4.0.0",
    "epub-meta>=0.0.7",
    "feedparser>=6.0.11",
    "tqdm>=4.67.1",
]
