[project]
name = "misc"
version = "0.1.0"
description = "all my misc python scripts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "polars",
    "numpy",
    "requests>=2.32.5",
    "bs4>=0.0.2",
    "ebooklib>=0.19",
    "markdown-it-py>=4.0.0",
    "epub-meta>=0.0.7",
    "feedparser>=6.0.11",
    "tqdm>=4.67.1",
    "pillow>=11.3.0",
    "yt-dlp>=2025.9.5",
    "readability>=0.3.2",
    "readability-lxml>=0.8.4.1",
    "markdown>=3.9",
    "beautifulsoup4>=4.13.5",
    "docx>=0.2.4",
    "python-docx>=1.2.0",
    "pyyaml>=6.0.3",
    "llama-cpp-python>=0.3.16",
    "langchain>=1.2.0",
    "chromadb>=1.4.0",
    "sentence-transformers>=5.2.0",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.0",
]
